--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
 
     //Glide
     implementation "com.github.bumptech.glide:glide:4.14.2"
+
+    //
+    implementation "androidx.fragment:fragment-ktx:1.5.5"
 }
